--- a/gate/submission/submission.html
+++ b/gate/submission/submission.html
@@ -16,7 +16,7 @@
   <canvas id="c"></canvas>
   <div class="brand-title">A-R-G</div>
   <div class="inputs">
-    <form name = "contact" method="POST" data-netlify="true">
+    <form name = "ARG" method="POST" data-netlify="true">
     <label>USERNAME</label>
     <input type="text" id = "name" required="required">
     <label>ID</label>
