--- a/gate/submission/submission.html
+++ b/gate/submission/submission.html
@@ -18,9 +18,9 @@
    <form name = "ARG" method="POST" data-netlify="true">
   <div class="inputs">
     <label>USERNAME</label>
-    <input type="text" id = "name" required="required">
+    <input name = "Username" type="text" id = "name" required="required">
     <label>ID</label>
-    <input type="number" id = "ide" required><br>
+    <input name "Identity" type="number" id = "ide" required><br>
     <input type="submit" value = "log in" id = "chk" onclick ="return check()" name="sub">
   </div>
     </form>
