--- a/gate/submission/submission.html
+++ b/gate/submission/submission.html
@@ -20,7 +20,7 @@
     <label>USERNAME</label>
     <input name = "Username" type="text" id = "name" required="required">
     <label>ID</label>
-    <input name "Identity" type="number" id = "ide" required><br>
+    <input name="Identity" type="number" id = "ide" required><br>
     <input type="submit" value = "log in" id = "chk" onclick ="return check()" name="sub">
   </div>
     </form>
