--- a/gate/submission/submission.html
+++ b/gate/submission/submission.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>  
-
 <div class="container">
   <canvas id="c"></canvas>
   <div class="brand-title">A-R-G</div>
@@ -24,7 +23,7 @@
     <input type="submit" value = "log in" id = "chk" onclick ="return check()" name="sub">
   </div>
     </form>
-     <p>If you're seeing this, you enetered the KEY correctly. Now, submit your ID and USERNAME so that I can know.</p>
+     <p>If you're seeing this, you entered the KEY correctly. Now, please submit your ID and USERNAME so that I can know.</p>
 </div>
 </body>
   <script src = "submission.js"></script> 
