--- a/current/current.html
+++ b/current/current.html
@@ -25,9 +25,9 @@
         </tr>
         <tr>
             <td>1</td>
-            <td>N/A</td>
+            <td>Yes</td>
             <td style = "border:none">  </td>
-            <td> N/A</td>
+            <td> </td>
         </tr>
     </table>
 </body>
