--- a/challenges/challenges.html
+++ b/challenges/challenges.html
@@ -25,9 +25,9 @@
             </tr>
             <tr>
                 <td>Challenge-1</td>
-                <td>N/A</td>
-                <td>Not-Active</td>
-                <td>29-11-21</td>
+                <td>Easy</td>
+                <td>Active</td>
+                <td>27-10-21</td>
             </tr>
             <tr>
                 <td>Challenge-2</td>
