--- a/challenges/challenges.html
+++ b/challenges/challenges.html
@@ -26,14 +26,14 @@
             <tr>
                 <td>Challenge-1</td>
                 <td>Easy</td>
-                <td>Active</td>
+                <td>Completed</td>
                 <td>27-10-21</td>
             </tr>
             <tr>
                 <td>Challenge-2</td>
-                <td>N/A</td>
-                <td>Not-Active</td>
-                <td>30-11-21</td>
+                <td>Find me</td>
+                <td>Active</td>
+                <td>6-11-21</td>
             </tr>
             <tr>
                 <td>Challenge-3</td>
