--- a/challenges/challenges.html
+++ b/challenges/challenges.html
@@ -32,7 +32,7 @@
             <tr>
                 <td>Challenge-2</td>
                 <td>Find me</td>
-                <td>Active</td>
+                <td>completed</td>
                 <td>6-11-21</td>
             </tr>
             <tr>
