--- a/gate/submission/submission.html
+++ b/gate/submission/submission.html
@@ -18,8 +18,8 @@
   <div class="inputs">
     <label>USERNAME</label>
     <input name = "Username" type="text" id = "name" required="required">
-    <label>ID</label>
-    <input name="Identity" type="number" id = "ide" required><br>
+    <label>Doubt</label>
+    <input name="Message" type="message" id = "ide" required><br>
     <input type="submit" value = "log in" id = "chk" onclick ="return check()" name="sub">
   </div>
     </form>
