--- a/gate/submission/submission.html
+++ b/gate/submission/submission.html
@@ -16,8 +16,8 @@
   <div class="brand-title">A-R-G</div>
    <form name = "ARG" method="POST" data-netlify="true">
   <div class="inputs">
-    <label>USERNAME</label>
-    <input name = "Username" type="text" id = "name" required="required">
+    <label>E-Mail</label>
+    <input name = "email" type="email" id = "name" required="required">
     <label>Your Doubt</label>
     <input name="Message" type="message" placeholder ="message" id = "ide" required><br>
     <input type="submit" value = "log in" id = "chk" onclick ="return check()" name="sub">
